--- a/note_book/hospital_quality.ipynb
+++ b/note_book/hospital_quality.ipynb
@@ -73,11 +73,11 @@
    "outputs": [],
    "source": [
     "# Create the figure and axis\n",
-    "best_hospital = best_hospital[best_hospital['State'] == 'DE']\n",
+    "best_hospital = best_hospital[best_hospital['State'] == 'VI']\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(10, 6))  # Adjust size for better visibility\n",
     "\n",
-    "ax.bar(best_hospital[\"Hospital Name\"],best_hospital[\"Hospital 30-Day Death (Mortality) Rates from Heart Failure\"])\n",
+    "ax.bar(best_hospital[\"Hospital Name\"],best_hospital[\"Hospital 30-Day Death (Mortality) Rates from Pneumonia\"])\n",
     "ax.set_ylabel('Mortality Rate')\n",
     "ax.set_title('Mortality of Heart Failure in each Hospital')\n",
     "plt.show()"
